@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r2-pre1
+  {
+    Modules = LHCbDIRAC:v9r2-pre1, LHCbWebDIRAC:v4r4p3
+    Depends = DIRAC:v6r20-pre11
+    LcgVer = v13r0
+  }
+
   v9r0-pre14
   {
     Modules = LHCbDIRAC:v9r0-pre14, LHCbWebDIRAC:v4r3p6
